Add disclaimer that widget doesn't always appear

--- a/_posts/2015-12-27-Texas.md
+++ b/_posts/2015-12-27-Texas.md
@@ -5,4 +5,4 @@ permalink: /Texas.html
 ---
 
 # TEXAS!
-Texas is amazing. That's why I made a .geojson representation of it, as shown [here](https://github.com/debium/www/blob/gh-pages/TEXAS.geojson), and down below on desktop. It's hosted on the same repo as this blog here, so you can grab it by clicking the "Fork me on Github" button and then "Download ZIP". Once you extract the directory, these wonderful 328 lines of code are yours to keep, subject to the MIT License. Enjoy!
+Texas is amazing. That's why I made a .geojson representation of it, as shown [here](https://github.com/debium/www/blob/gh-pages/TEXAS.geojson), and down below on desktop if viewing thepost individually. It's hosted on the same repo as this blog here, so you can grab it by clicking the "Fork me on Github" button and then "Download ZIP". Once you extract the directory, these wonderful 328 lines of code are yours to keep, subject to the MIT License. Enjoy!
